k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pixelcore
  labels:
    name: pixelcore
    environment: production
